Fix agent debugger
* Security to SessionScoped

* Minimum single thread for debugger

* Validate position of list before every use to avoid IndexOutOfBoundsException after a item removal

* AWSXRay: setUser to currentSegment at filter

* update README.MD with badges