@@ -1,19 +1,24 @@
 ![](https://raw.githubusercontent.com/intuit/tank/master/assets/TankLogo.gif)
 
+[![Build Status](https://travis-ci.org/intuit/Tank.svg?branch=master)](https://travis-ci.org/intuit/Tank)
+![Build Status](https://codebuild.us-east-2.amazonaws.com/badges?uuid=eyJlbmNyeXB0ZWREYXRhIjoiT1Nuc1prblk5Y0E3a05mRjF0QUtBblI0Rk1zTjZyZi9NMWNCaFg4cGlzL1dFN0xVMHgzcGt1ZCtBdFZjNWpMRkhXbGN2T1ZKSmpZbGQ3YjhyaWkzdkJBPSIsIml2UGFyYW1ldGVyU3BlYyI6IlpGbU5vTHM2cHQrbUowOVkiLCJtYXRlcmlhbFNldFNlcmlhbCI6MX0%3D&branch=master)
+[![release](https://img.shields.io/badge/release-2.3.3-yellogreen.svg)](https://github.com/intuit/Tank/releases/tag/2.3.3)
+[![java](https://img.shields.io/badge/java-1.8-blue.svg)](https://aws.amazon.com/corretto/)
+[![tomcat](https://img.shields.io/badge/tomcat-8%20%7C%208.5%20%7C%209-blue.svg)](http://tomcat.apache.org/)
 # Intuit Tank
 
 Intuit Tank is a load test platform that runs in a cloud environment. It currently supports Amazon web interfaces and utilizes services from EC2, S3, and DynamoDb.
 
 Intuit Tank has two main components: A controller and agents.
 
-The Controller is the central hub in the deployment. It supports the GUI for managing tests and for orchestrating. It utilizes Tomcat 6x for a web container and communicates with the agents via http. 
-It exposes a RESTful interface for invoking services. Data is stored in a MySql database, on the file system, and in DynamoDb.
+The Controller is the central hub in the deployment. It supports the GUI for managing tests and for orchestrating. It utilizes Apache Tomcat for a web container and communicates with the agents via http. 
+It exposes a RESTful interface for invoking services. Data is stored in a MySql database, on the file system, and reporting metrics can be stored in simpleDB, dynamoDB or wavefront.
 
 Agents are instantiated on demand and exist for the duration of a test. They communicate with the controller via RESTful interfaces.
 
 ## Building Intuit Tank
 Intuit Tank uses Maven and should be able to be built using public repositories. 
-You may need to increase the default memory settings for maven to build. e.g. export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+You may need to increase the default memory settings for maven to build. e.g. export MAVEN_OPTS="-Xmx1g"
 
 There are several profiles (for the initial build you should build the release profile so that the installation guide is built. e.g. mvn clean install -P release)
 * default -- builds source but does not build the docs or package tools.
